2005-10-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml-sec.el (mml-secure-method): New internal variable.
	(mml-secure-sign, mml-secure-encrypt, mml-secure-message-sign)
	(mml-secure-message-sign-encrypt, mml-secure-message-encrypt): New
	functions using mml-secure-method.

	* mml.el (mml-mode-map): Add key bindings for those functions.
	(mml-menu): Simplify security menu entries.  Suggested by Jesper
	Harder <harder@myrealbox.com>.
	(mml-attach-file, mml-attach-buffer, mml-attach-external): Goto
	end of message if point is the headers of the message.

	* message.el (message-in-body-p): New function.

	* assistant.el: Autoload gnus-util and netrc.

	* mm-util.el (mm-charset-to-coding-system): Add allow-override.
	Use `mm-charset-override-alist' only when decoding.

	* mm-bodies.el (mm-decode-body): Call
	`mm-charset-to-coding-system' with allow-override argument.

	* gnus-art.el (gnus-mime-view-part-as-type-internal): Try to fetch
	`filename' from Content-Disposition if Content-Type doesn't
	provide `name'.
	(gnus-mime-view-part-as-type): Set default instead of
	initial-input.

2005-10-09  Daniel Brockman <daniel@brockman.se>

	* format-spec.el (format-spec): Propagate text properties of % spec.

2005-10-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-treat-predicate): Add `first'.

2005-10-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-charset-synonym-alist): Improve doc string.
	(mm-charset-override-alist): New variable.
	(mm-charset-to-coding-system): Use it.
	(mm-codepage-setup): New helper function.
	(mm-charset-eval-alist): New variable.
	(mm-charset-to-coding-system): Use mm-charset-eval-alist.  Warn
	about unknown charsets.

	* dgnushack.el (with-syntax-table): Add some URLs WRT the XEmacs bug.

2005-10-04  David Hansen  <david.hansen@gmx.net>

	* nnrss.el (nnrss-request-article): Add support for the comments tag.
	(nnrss-check-group): Ditto.

2005-10-04  Reiner Steib  <Reiner.Steib@gmx.de>
