@@ -1,3 +1,7 @@
+2005-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* lpath.el: Fbind codepage-setup for XEmacs.
+
 2005-10-13  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* mml-sec.el (mml-secure-method): New internal variable.
